<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.SingUpActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="@color/colorTextIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_15ssp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/we_need_a_few_details_to_get_your_account_ready"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11sdp"/>



                    <EditText
                        android:id="@+id/inputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:hint="@string/limon"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_13sdp"
                        android:textColorHint="@color/colorTextHint"/>



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11sdp"/>



                    <EditText
                        android:id="@+id/inputLastName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:hint="@string/islam"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_13sdp"
                        android:textColorHint="@color/colorTextHint"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11sdp"/>

                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:hint="you@example.com"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_13sdp"
                        android:textColorHint="@color/colorTextHint"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11sdp"/>


                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:hint="@string/password_hint"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_13sdp"
                        android:textColorHint="@color/colorTextHint"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_11sdp"/>


                    <EditText
                        android:id="@+id/inputConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:hint="@string/password_hint"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_13sdp"
                        android:textColorHint="@color/colorTextHint"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/cardSingIn"
                    android:fontFamily="@font/ubuntu_bold"/>

                <ProgressBar
                    android:id="@+id/signUpProgressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:layout_height="@dimen/_25sdp"/>

            </FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:includeFontPadding="false"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/colorPrimaryText"/>

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>